[gd_scene load_steps=3 format=3 uid="uid://duc3mjrijegti"]

[ext_resource type="Script" path="res://Scenes/WorldStructures/Bases/SubBase.gd" id="1_qfgen"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_thuke"]
size = Vector2(128, 128)

[node name="SubBase" type="Area2D"]
collision_mask = 3
script = ExtResource("1_qfgen")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_thuke")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -96.0
offset_top = -96.0
offset_right = 160.0
offset_bottom = 160.0
scale = Vector2(0.75, 0.75)
color = Color(0.831373, 0.658824, 0.219608, 1)

[node name="RegenTimer" type="Timer" parent="."]
wait_time = 45.0
one_shot = true

[node name="AttackMessageCooldown" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="RegenTimer" to="." method="_on_regen_timer_timeout"]
[connection signal="timeout" from="AttackMessageCooldown" to="." method="_on_attack_message_cooldown_timeout"]
